--- a/src/components/Stylesheets/CountriesStyle.css
+++ b/src/components/Stylesheets/CountriesStyle.css
@@ -4,3 +4,12 @@
     column-gap: 30px;
     row-gap: 30px;
 }
+
+.country-button{
+    margin-top: 30px;
+    margin-left: 30px;
+    width: 400px;
+    background-color: transparent;
+    padding: 0;
+    border-color: transparent;
+}
