--- a/src/components/Stylesheets/CountryStyle.css
+++ b/src/components/Stylesheets/CountryStyle.css
@@ -1,35 +1,30 @@
 #Country {
-    height: 500px;
-    margin-top: 30px;
-    margin-left: 30px;
-    background-color: hsl(0, 0%, 100%);
-    width: 393px;
+  height: 500px;
+  background-color: hsl(0, 0%, 100%);
+  width: 100%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-#flag{
-    width: 400px;
-    height: 250px;
-    border: solid;
+#Country:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
-#name{
-    margin-left: 24px;
-    font-weight: bold;
-    font-size: 30px;
+#flag {
+  width: 100%;
+  height: 250px;
 }
-
-.bold{
-    font-weight: bold;
-    margin-left: 24px;
+#name {
+  margin: 36px 0px 26px 37px;
+  font-weight: bold;
+  font-size: 25px;
 }
 
-/* #population{
-
+.bold {
+  font-weight: bold;
+  margin-left: 24px;
 }
 
-#region{
-
+.country-part {
+  text-align: initial;
+  margin: 10px 0px 10px 15px;
 }
-
-#capital{
-
-} */
