fixed small issues and made css Responsive for both mobile and desktop versions

--- a/src/components/Stylesheets/SearchFeaturesStyle.css
+++ b/src/components/Stylesheets/SearchFeaturesStyle.css
@@ -1,32 +1,72 @@
-#navBar{
+#navBar {
+  display: flex;
+  justify-content: space-between;
+}
+#search {
+  margin-left: 30px;
+  /* padding: 5px 0px 5px 15px; */
+  width: 300px;
+  height: 30px;
+  padding-left: 50px;
+  font-size: 20px;
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  border-color: transparent;
+}
+
+#search-button {
+  position: absolute;
+  left: 48px;
+  top: 125px;
+  background-color: transparent;
+  border: none;
+}
+
+#filter-button{
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  border-color: transparent;
+  margin-right: 2vw;
+}
+
+#Capa_1 {
+  position: relative;
+  height: 15px;
+  width: 15px;
+}
+
+.filter-region {
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: bold;
+}
+
+@media (max-width: 900px) {
+  #navBar {
     display: flex;
-    justify-content: space-between;
-}
-#search{
-    margin-left: 30px;
-    /* padding: 5px 0px 5px 15px; */
-    width: 300px;
+    flex-direction: column;
+  }
+  #search {
+    margin-left: 4vw;
+    width: 77vw;
     height: 30px;
-    padding-left: 50px;
+    padding-left: 48px;
     font-size: 20px;
-
+    margin-bottom: 3vh;
+  }
+  #filter-button {
+    width: 50vw;
+    margin-left: 4vw;
+    height: 30px;
+    margin-bottom: 1vh;
+  }
 }
 
-#search-button{
+@media (max-width: 500px) {
+  #search-button {
     position: absolute;
-    left: 48px;
+    left: 35px;
     top: 125px;
     background-color: transparent;
     border: none;
-}
-
-#Capa_1{
-    position: relative;
-    height: 15px;
-    width: 15px;
-}
-
-.filter-region{
-    font-family: 'Nunito Sans', sans-serif;
-    font-weight: bold;
+  }
 }
