--- a/src/components/Stylesheets/CountriesStyle.css
+++ b/src/components/Stylesheets/CountriesStyle.css
@@ -1,8 +1,7 @@
 #countries{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 30px;
-    row-gap: 30px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    gap: 30px;
 }
 
 .country-button{
@@ -12,4 +11,33 @@
     background-color: transparent;
     padding: 0;
     border-color: transparent;
+}
+
+@media (max-width: 900px) {
+    #countries{
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+
+    }
+    .country-button{
+        width: 400px;
+        background-color: transparent;
+        padding: 0;
+        border-color: transparent;
+        margin: 0;
+    }
+    html {
+        padding: 0px;
+        margin: 0px;
+    }
+}
+@media (max-width: 450px){
+    .country-button{
+        width: 90vw;
+        background-color: transparent;
+        padding: 0;
+        border-color: transparent;
+        margin: 0;
+    }
 }
