--- a/src/components/Stylesheets/CountryDetails.css
+++ b/src/components/Stylesheets/CountryDetails.css
@@ -1,12 +1,172 @@
+body,
+html {
+  height: 100%;
+}
+#origin-wrapper {
+  height: 800px;
+  width: 100%;
+}
+.title-format {
+  font-weight: 600;
+}
+
+.props-format {
+  font-weight: 400;
+}
+
+#title-name {
+  font-size: 35px;
+  font-weight: bold;
+}
+
+#main-wrapper {
+  display: flex;
+  align-items: center;
+  height: inherit;
+  position: relative;
+  left: 6rem;
+  top: 2rem;
+}
+
+#flag-details {
+  width: 28vw;
+  margin: 5rem;
+}
+
+#information-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+}
+
+#list-wrapper {
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 50px;
+  height: 142px;
+}
+
+#back-button {
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  border-color: transparent;
+  height: 41px;
+  width: 150px;
+  border-radius: 3px;
+  font-size: 15px;
+  padding-left: 30px;
+}
+
+#back-button:hover{
+    background-color: hsl(0, 0%, 90%)
+}
+
+#arrow-image{
+    position: relative;
+    left: 36px;
+    top: 12px;
+    width: 15px;
+}
+
+#button-wrapper{
+    position: absolute;
+    left: 11rem;
+    top: 11rem;
+    z-index: 10;
+}
+
+div #root{
+    height: inherit;
+}
+
+.border-buttons {
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  border-color: transparent;
+  height: min(2rem, 100%);
+  border-radius: 0.3rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  min-height: 2rem;
+}
+
+#button-wrapper2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+
+.format-title{
+  margin-right: 1rem;
+}
+
+@media (max-width: 1200px){
+  #button-wrapper{
+    margin-left: 4vw;
+    position: initial;
+  }
+  #main-wrapper {
+    display: flex;
+    align-items: baseline;
+    height: initial;
+    position: initial;
+    flex-direction: column;
+    align-content: center;
+}
+#flag-details {
+  width: 60vw;
+}
 .title-format{
-    font-weight: bold;
+  margin-bottom: 1rem;
+}
 }
 
-.props-format{
-    font-weight: 400;
-}
-
-#title-name{
-    font-size: 25px;
+@media (max-width:700px){
+  #flag-details {
+    width: 80vw;
+    margin: 0rem;
+    margin-bottom: .5rem;
+  }
+  #title-name {
+    font-size: 30px;
     font-weight: bold;
+}
+#list-wrapper {
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-bottom: 50px;
+  height: initial;
+  justify-items: start;
+}
+#back-button {
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+  border-color: transparent;
+  height: 41px;
+  width: 101px;
+  border-radius: 3px;
+  font-size: 15px;
+  padding-left: 30px;
+  margin-bottom: 2rem;
+}
+#information-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: initial;
+  justify-content: center;
+  margin-left: 2rem;
+}
+#origin-wrapper {
+  height: initial;
+  width: initial;
+}
+body, html {
+  height: initial;
+}
 }
